--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
       - sessions_data:/app/data
-    restart: unless-stopped
     networks:
-      - traefik
+      - wegetnet
       - astro-network
     labels:
       - "traefik.enable=true"
@@ -19,7 +18,7 @@ services:
       - "traefik.http.routers.astro-backend.tls=true"
       - "traefik.http.routers.astro-backend.tls.certresolver=letsencrypt"
       - "traefik.http.services.astro-backend.loadbalancer.server.port=8081"
-      - "traefik.docker.network=traefik"
+      - "traefik.docker.network=wegetnet"
     command: >
       sh -c "
         echo 'Baixando código do GitHub...' &&
@@ -36,12 +35,15 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
   frontend:
     image: nginx:alpine
-    restart: unless-stopped
     networks:
-      - traefik
+      - wegetnet
       - astro-network
     labels:
       - "traefik.enable=true"
@@ -49,7 +51,7 @@ services:
       - "traefik.http.routers.astro-frontend.tls=true"
       - "traefik.http.routers.astro-frontend.tls.certresolver=letsencrypt"
       - "traefik.http.services.astro-frontend.loadbalancer.server.port=80"
-      - "traefik.docker.network=traefik"
+      - "traefik.docker.network=wegetnet"
     volumes:
       - frontend_data:/usr/share/nginx/html
     command: >
@@ -69,6 +71,10 @@ services:
         echo 'Iniciando nginx...' &&
         nginx -g 'daemon off;'
       "
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
 
 volumes:
   sessions_data:
@@ -77,7 +83,7 @@ volumes:
     driver: local
 
 networks:
-  traefik:
+  wegetnet:
     external: true
   astro-network:
-    driver: bridge
+    driver: overlay
