--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,17 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.astro-backend.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend-secure.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend-secure.tls=true"
-      - "traefik.http.routers.astro-backend-secure.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.astro-backend-secure.entrypoints=websecure"
-      - "traefik.http.routers.astro-backend.entrypoints=web"
+      - "traefik.http.routers.astro-backend.tls=true"
+      - "traefik.http.routers.astro-backend.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.astro-backend.entrypoints=websecure"
+      - "traefik.http.routers.astro-backend.priority=100"
       - "traefik.http.services.astro-backend.loadbalancer.server.port=8081"
       - "traefik.docker.network=wegetnet"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.astro-backend-insecure.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.astro-backend-insecure.entrypoints=web"
+      - "traefik.http.routers.astro-backend-insecure.middlewares=redirect-to-https"
+      - "traefik.http.routers.astro-backend-insecure.priority=100"
     command: >
       sh -c "
         echo 'Baixando código do GitHub...' &&
@@ -51,13 +55,16 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.astro-frontend.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend-secure.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend-secure.tls=true"
-      - "traefik.http.routers.astro-frontend-secure.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.astro-frontend-secure.entrypoints=websecure"
-      - "traefik.http.routers.astro-frontend.entrypoints=web"
+      - "traefik.http.routers.astro-frontend.tls=true"
+      - "traefik.http.routers.astro-frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.astro-frontend.entrypoints=websecure"
+      - "traefik.http.routers.astro-frontend.priority=100"
       - "traefik.http.services.astro-frontend.loadbalancer.server.port=80"
       - "traefik.docker.network=wegetnet"
+      - "traefik.http.routers.astro-frontend-insecure.rule=Host(`app.saudemental.icu`)"
+      - "traefik.http.routers.astro-frontend-insecure.entrypoints=web"
+      - "traefik.http.routers.astro-frontend-insecure.middlewares=redirect-to-https"
+      - "traefik.http.routers.astro-frontend-insecure.priority=100"
     volumes:
       - frontend_data:/usr/share/nginx/html
     command: >
