--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,20 +11,8 @@ services:
       - sessions_data:/app/data
     networks:
       - wegetnet
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.astro-backend.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend.tls=true"
-      - "traefik.http.routers.astro-backend.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.astro-backend.entrypoints=websecure"
-      - "traefik.http.routers.astro-backend.priority=100"
-      - "traefik.http.services.astro-backend.loadbalancer.server.port=8081"
-      - "traefik.docker.network=wegetnet"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.astro-backend-insecure.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend-insecure.entrypoints=web"
-      - "traefik.http.routers.astro-backend-insecure.middlewares=redirect-to-https"
-      - "traefik.http.routers.astro-backend-insecure.priority=100"
+    ports:
+      - "8081:8081"
     command: >
       sh -c "
         echo 'Baixando código do GitHub...' &&
@@ -50,21 +38,11 @@ services:
     image: nginx:alpine
     networks:
       - wegetnet
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.astro-frontend.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend.tls=true"
-      - "traefik.http.routers.astro-frontend.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.astro-frontend.entrypoints=websecure"
-      - "traefik.http.routers.astro-frontend.priority=100"
-      - "traefik.http.services.astro-frontend.loadbalancer.server.port=80"
-      - "traefik.docker.network=wegetnet"
-      - "traefik.http.routers.astro-frontend-insecure.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend-insecure.entrypoints=web"
-      - "traefik.http.routers.astro-frontend-insecure.middlewares=redirect-to-https"
-      - "traefik.http.routers.astro-frontend-insecure.priority=100"
     volumes:
       - frontend_data:/usr/share/nginx/html
+    ports:
+      - "80:80"
+      - "443:443"
     command: >
       sh -c "
         echo 'Baixando código do GitHub...' &&
@@ -79,6 +57,9 @@ services:
         cp -r build/* /usr/share/nginx/html/ &&
         echo 'Configurando nginx...' &&
         cp nginx.conf /etc/nginx/conf.d/default.conf &&
+        echo 'Gerando certificados SSL...' &&
+        mkdir -p /etc/ssl/certs &&
+        openssl req -x509 -newkey rsa:4096 -keyout /etc/ssl/certs/key.pem -out /etc/ssl/certs/cert.pem -days 365 -nodes -subj '/C=BR/ST=Estado/L=Cidade/O=Organizacao/CN=app.saudemental.icu' &&
         echo 'Iniciando nginx...' &&
         nginx -g 'daemon off;'
       "
