--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     image: nginx:alpine
     networks:
       - wegetnet
+    depends_on:
+      - backend
     volumes:
       - frontend_data:/usr/share/nginx/html
     ports:
