--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,6 @@
 server {
     listen 80;
-    server_name app.saudemental.icu;
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name app.saudemental.icu;
-    ssl_certificate /etc/ssl/certs/cert.pem;
-    ssl_certificate_key /etc/ssl/certs/key.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
+    server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -52,4 +41,5 @@ server {
     
     # Force HTTPS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options "nosniff" always;
 }
