--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend:
-    image: node:18-alpine
+    build: ./backend
     working_dir: /app
     environment:
       - NODE_ENV=production
@@ -25,17 +25,6 @@ services:
       - "traefik.http.routers.astro-backend-insecure.entrypoints=web"
       - "traefik.http.routers.astro-backend-insecure.middlewares=redirect-to-https"
       - "traefik.http.routers.astro-backend-insecure.priority=100"
-    command: >
-      sh -c "
-        echo 'Baixando código do GitHub...' &&
-        apk add --no-cache git &&
-        git clone https://github.com/gabossantos-droid/astromental.git /tmp/repo &&
-        cp -r /tmp/repo/backend/* /app/ &&
-        echo 'Instalando dependências...' &&
-        npm install &&
-        echo 'Iniciando servidor...' &&
-        node server.js
-      "
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8081/health"]
       interval: 30s
