--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,19 +12,14 @@ services:
     networks:
       - wegetnet
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.astro-backend.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend.tls=true"
-      - "traefik.http.routers.astro-backend.tls.certresolver=letsencryptresolver"
-      - "traefik.http.routers.astro-backend.entrypoints=websecure"
-      - "traefik.http.routers.astro-backend.priority=100"
-      - "traefik.http.services.astro-backend.loadbalancer.server.port=8081"
-      - "traefik.docker.network=wegetnet"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.astro-backend-insecure.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.astro-backend-insecure.entrypoints=web"
-      - "traefik.http.routers.astro-backend-insecure.middlewares=redirect-to-https"
-      - "traefik.http.routers.astro-backend-insecure.priority=100"
+      - traefik.enable=1
+      - traefik.http.routers.astro-backend.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)
+      - traefik.http.routers.astro-backend.entrypoints=websecure
+      - traefik.http.routers.astro-backend.priority=1
+      - traefik.http.routers.astro-backend.tls.certresolver=letsencryptresolver
+      - traefik.http.routers.astro-backend.service=evolution
+      - traefik.http.services.astro-backend.loadbalancer.server.port=8080
+      - traefik.http.services.astro-backend.loadbalancer.passHostHeader=true
     command: >
       sh -c "
         echo 'Baixando código do GitHub...' &&
@@ -37,7 +32,7 @@ services:
         node server.js
       "
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8081/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -53,18 +48,14 @@ services:
     depends_on:
       - backend
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.astro-frontend.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend.tls=true"
-      - "traefik.http.routers.astro-frontend.tls.certresolver=letsencryptresolver"
-      - "traefik.http.routers.astro-frontend.entrypoints=websecure"
-      - "traefik.http.routers.astro-frontend.priority=100"
-      - "traefik.http.services.astro-frontend.loadbalancer.server.port=80"
-      - "traefik.docker.network=wegetnet"
-      - "traefik.http.routers.astro-frontend-insecure.rule=Host(`app.saudemental.icu`)"
-      - "traefik.http.routers.astro-frontend-insecure.entrypoints=web"
-      - "traefik.http.routers.astro-frontend-insecure.middlewares=redirect-to-https"
-      - "traefik.http.routers.astro-frontend-insecure.priority=100"
+      - traefik.enable=1
+      - traefik.http.routers.astro-frontend.rule=Host(`app.saudemental.icu`)
+      - traefik.http.routers.astro-frontend.entrypoints=websecure
+      - traefik.http.routers.astro-frontend.priority=1
+      - traefik.http.routers.astro-frontend.tls.certresolver=letsencryptresolver
+      - traefik.http.routers.astro-frontend.service=evolution
+      - traefik.http.services.astro-frontend.loadbalancer.server.port=8080
+      - traefik.http.services.astro-frontend.loadbalancer.passHostHeader=true
     volumes:
       - frontend_data:/usr/share/nginx/html
     command: >
