--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
     networks:
       - wegetnet
     labels:
-      - traefik.enable=1
+      - traefik.enable=true
       - traefik.http.routers.astro-backend.rule=Host(`app.saudemental.icu`) && PathPrefix(`/api`)
       - traefik.http.routers.astro-backend.entrypoints=websecure
-      - traefik.http.routers.astro-backend.priority=1
+      - traefik.http.routers.astro-backend.tls=true
+      - traefik.http.routers.astro-backend.priority=100
       - traefik.http.routers.astro-backend.tls.certresolver=letsencryptresolver
-      - traefik.http.routers.astro-backend.service=evolution
+      - traefik.docker.network=wegetnet
       - traefik.http.services.astro-backend.loadbalancer.server.port=8081
       - traefik.http.services.astro-backend.loadbalancer.passHostHeader=true
     command: >
@@ -48,12 +49,13 @@ services:
     depends_on:
       - backend
     labels:
-      - traefik.enable=1
+      - traefik.enable=true
       - traefik.http.routers.astro-frontend.rule=Host(`app.saudemental.icu`)
       - traefik.http.routers.astro-frontend.entrypoints=websecure
-      - traefik.http.routers.astro-frontend.priority=1
+      - traefik.http.routers.astro-frontend.tls=true
+      - traefik.http.routers.astro-frontend.priority=10
       - traefik.http.routers.astro-frontend.tls.certresolver=letsencryptresolver
-      - traefik.http.routers.astro-frontend.service=evolution
+      - traefik.docker.network=wegetnet
       - traefik.http.services.astro-frontend.loadbalancer.server.port=80
       - traefik.http.services.astro-frontend.loadbalancer.passHostHeader=true
     volumes:
